# TextMateLib

./: .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  CMakeLists.wasm  LICENSE  README.md  conanfile.py  eslint.config.js  log.txt  package-lock.json  package.json
.changeset/: README.md  config.json  efinefesm.md
.github/: CODEOWNERS  FUNDING.yml
.github/actions/bump-versions/: action.yml
.github/workflows/: build-and-test.yml  build-playground.yml  changeset-version.yml  create-release.yml  deploy-playground.yml  draft-release.yml  release.yml  test-npm-package.yml
.husky/: pre-commit
docs/: .gitignore  README.md
playground/: .gitignore  README.md  app.js  build-wasm.sh  grammars.js  index.html  package-lock.json  package.json  serve.sh  styles.css  themes.js  vite.config.js
playground/scripts/: postinstall.js
playground/src/: app.js  themes.js
scripts/: build-deps.sh  build-wasm-all.sh  build-wasm-debug.sh  build-wasm-full.sh  build-wasm-minimal.sh  build-wasm-standard.sh  build-wasm-test.sh  build-wasm.sh  build.sh  bump-versions.sh
src/: basicScopesAttributeProvider.cpp  basicScopesAttributeProvider.h  bigint_bindings.h  bindings.cpp  bulk_memory_bindings.cpp  bulk_memory_bindings.h  c_api.cpp  c_api.h  encodedTokenAttributes.cpp  encodedTokenAttributes.h  exception_bindings.cpp  exception_bindings.h  grammar.cpp  grammar.h  grammarDependencies.cpp  grammarDependencies.h  main.cpp  main.h  matcher.cpp  matcher.h  onigLib.cpp  onigLib.h  parseRawGrammar.cpp  parseRawGrammar.h  parseRawTheme.cpp  rawGrammar.cpp  rawGrammar.h  registry.cpp  registry.h  rule.cpp  rule.h  session.cpp  session.h  session_c_api.h  simd_bindings.cpp  simd_bindings.h  syntax_highlighter.cpp  syntax_highlighter.h  syntax_highlighter_c_api.h  theme.cpp  (+9 more)
src/csharp/: .gitignore
src/csharp/TextMateLib.Bindings/: Grammar.cs  NativeMethods.cs  Registry.cs  TextMateLib.Bindings.csproj  Theme.cs  Token.cs
src/js/: package.json  rollup.config.js  vitest.config.ts
src/js/src/: TextMate.ts  types.ts
src/js/tests/: setup.ts
src/js/tests/integration/: theme.test.ts
src/js/tests/unit/: Registry.test.ts
tests/: CMakeLists.txt  benchmark_large.cpp  benchmark_session.cpp  benchmark_session_comparison.cpp  test_first_mate.cpp  test_session.cpp  test_syntax_highlighter.cpp  test_theme_simple.cpp
tests/benchmark_large/: benchmark_large.cpp
tests/benchmark_session/: benchmark_session.cpp
tests/benchmark_session_comparison/: benchmark_session_comparison.cpp
tests/csharp/TextMateLib.Tests/: BasicTests.cs  TextMateLib.Tests.csproj  TextMateLib.Tests.sln  ThemeTests.cs  TokenizationTests.cs
tests/test_first_mate/: test_first_mate.cpp
tests/test_syntax_highlighter/: test_syntax_highlighter.cpp
tests/test_theme/: test_theme.cpp  test_theme.cpp.bak
tests/test_theme_debug/: test_theme_debug.cpp
tests/test_theme_file/: test_theme_file.cpp
